AM_CPPFLAGS = -I../include
AM_CFLAGS = -fPIC -shared
lib_LTLIBRARIES = libdevtools.la
libdevtools_la_SOURCES = hashtable.c  \
inlist.c  \
join.c  \
list_append.c  \
list_copy.c  \
list_insert.c  \
makelist.c  \
mkalpha.c  \
mkalphanum.c  \
mknumeric.c  \
randchar.c  \
randint.c  \
randomstring.c  \
sortlist.c  \
split.c  \
strllen.c  \
superhash.c
