AM_CPPFLAGS = -I../include
bin_PROGRAMS = test_hashtable \
test_inlist \
test_join \
test_list_append \
test_list_copy \
test_list_insert \
test_makelist \
test_mkalpha \
test_mkalphanum \
test_mknumeric \
test_randchar \
test_randint \
test_randomstring \
test_sortlist \
test_split \
test_strllen \
test_superhash 

test_hashtable_SOURCES = test_hashtable.c
test_hashtable_LDADD = ../lib/libdevtools.la

test_inlist_SOURCES = test_inlist.c
test_inlist_LDADD = ../lib/libdevtools.la

test_join_SOURCES = test_join.c
test_join_LDADD = ../lib/libdevtools.la

test_list_append_SOURCES = test_list_append.c
test_list_append_LDADD = ../lib/libdevtools.la

test_list_copy_SOURCES = test_list_copy.c
test_list_copy_LDADD = ../lib/libdevtools.la

test_list_insert_SOURCES = test_list_insert.c
test_list_insert_LDADD = ../lib/libdevtools.la

test_makelist_SOURCES = test_makelist.c
test_makelist_LDADD = ../lib/libdevtools.la

test_mkalpha_SOURCES = test_mkalpha.c
test_mkalpha_LDADD = ../lib/libdevtools.la

test_mkalphanum_SOURCES = test_mkalphanum.c
test_mkalphanum_LDADD = ../lib/libdevtools.la

test_mknumeric_SOURCES = test_mknumeric.c
test_mknumeric_LDADD = ../lib/libdevtools.la

test_randchar_SOURCES = test_randchar.c
test_randchar_LDADD = ../lib/libdevtools.la

test_randint_SOURCES = test_randint.c
test_randint_LDADD = ../lib/libdevtools.la

test_randomstring_SOURCES = test_randomstring.c
test_randomstring_LDADD = ../lib/libdevtools.la

test_sortlist_SOURCES = test_sortlist.c
test_sortlist_LDADD = ../lib/libdevtools.la

test_split_SOURCES = test_split.c
test_split_LDADD = ../lib/libdevtools.la

test_strllen_SOURCES = test_strllen.c
test_strllen_LDADD = ../lib/libdevtools.la

test_superhash_SOURCES = test_superhash.c
test_superhash_LDADD = ../lib/libdevtools.la

